--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,4 +54,4 @@ jobs:
           build_dir: docs/.vuepress/dist
         env:
           # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-          GITHUB_TOKEN: ${{ secrets.VUEPRESS1 }}
+          GITHUB_TOKEN: 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
